cabal-version:      2.4
name:               json-streamly
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Magesh
maintainer:         magesh85@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Streamly.Json

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , streamly >= 0.8.0
                    , json-stream >= 0.4.2
                    , streamly-bytestring >= 0.1.3
                    , aeson < 2
                    , exceptions >= 0.1.0
                    , monad-control >= 1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options :    -Wall

test-suite json-streamly-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.12.0.0
